fixed footer color, testing brand sizes

--- a/index.html
+++ b/index.html
@@ -297,9 +297,10 @@
 
         <ul class="textContainer">
           <h3>Navigation</h3>
-          <li><a class="nav-link" href="index.html" title="Click here to go to the homepage">Home</a></li>
-          <li><a class="nav-link" href="about.html" title="Click here to go to the about page">About</a></li>
-          <li><a class="nav-link" href="contact.html" title="Click here to go to the contact page">Contact</a></li>
+          <li><a class="nav-link light" href="index.html" title="Click here to go to the homepage">Home</a></li>
+          <li><a class="nav-link light" href="about.html" title="Click here to go to the about page">About</a></li>
+          <li><a class="nav-link light" href="contact.html" title="Click here to go to the contact page">Contact</a>
+          </li>
         </ul>
 
         <div class="textContainer">
@@ -314,10 +315,14 @@
 
         <ul class="textContainer">
           <h3>Get In Touch</h3>
-          <li><a class="nav-link" href="#" title="Click here to go to the homepage">2540 Kensington Road NW, Calgary, AB
+          <li><a class="nav-link light" href="#" title="Click here to go to the homepage">2540 Kensington Road NW,
+              Calgary, AB
               T2N 3S3</a></li>
-          <li><a class="nav-link" href="#" title="Click here to go to the about page">info@etelligent.ca</a></li>
-          <li><a class="nav-link" href="#" title="Click here to go to Travel's Twitter Page">+1 (403) 555-1234</a></li>
+          <li><a class="nav-link light" href="#" title="Click here to go to the about page">info@etelligent.ca</a>
+          </li>
+          <li><a class="nav-link light" href="#" title="Click here to go to Travel's Twitter Page">+1 (403)
+              555-1234</a>
+          </li>
         </ul>
 
         <!-- footer third content -->
@@ -332,9 +337,10 @@
 
   <div class="copyright">
     <div class="wrapper">
-      <h4>Made with &#x2764 by Haris Shaikh</h4>
+      <h5>Made with &#x2764 by Haris Shaikh</h5>
     </div>
   </div>
+
 
 
 </body>
