mobile menu working

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             </a>
 
             <!-- HAMBURGER/MOBILE MENU -->
-            <label for="toggle"><img class='menu' src='./assets/hamburger.svg' aria-hidden="true"><span
+            <label for="toggle"><img class='menu' src='./assets/hamburger-light.svg' aria-hidden="true"><span
                 class="sr-only">Menu</span></label>
             <input type="checkbox" id="toggle" name="toggle" />
             <ul>
