--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
           </a>
 
           <!-- HAMBURGER/MOBILE MENU -->
-          <label for="toggle"><img class='menu' src='./assets/hamburger.svg' aria-hidden="true"><span
+          <label for="toggle"><img class='menu' src='./assets/hamburger-light.svg' aria-hidden="true"><span
               class="sr-only">Menu</span></label>
           <input type="checkbox" id="toggle" name="toggle" />
-          <ul>
+          <ul class="dark">
             <li><a class="nav-link light" href="index.html" title="Click here to go to the homepage">Home</a></li>
             <li><a class="nav-link light" href="about.html" title="Click here to go to our about page">About</a></li>
             <li><a class="nav-link light" href="contact.html" title="Click here to go to our contact page">Contact </a>
@@ -43,12 +43,14 @@
     </nav>
   </header>
   <div class="hero banner overlay">
-    <div class="hero-container">
-      <h1>About Us</h1>
-      <div class="divider"></div>
-      <p class="description center">At E-telli-gent we provide a focused, broad range of services to a
-        world-class, international,
-        region-centric clientelle with our signature e-solutions.</p>
+    <div class="wrapper">
+      <div class="hero-container">
+        <h1>About Us</h1>
+        <div class="divider"></div>
+        <p class="description center">At E-telli-gent we provide a focused, broad range of services to a
+          world-class, international,
+          region-centric clientelle with our signature e-solutions.</p>
+      </div>
     </div>
   </div>
 
