all done ready to deploy

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-telli-gent - Home</title>
+  <title>E-telli-gent - About</title>
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" type="text/css" href="./fonts/MyFontsWebfontsKit.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,6 +12,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a5445796b5.js" crossorigin="anonymous"></script>
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://e-telli-gent.com/">
+  <meta property="og:title" content="E-telli-gent - About Page">
+  <meta property="og:description" content="At E-telli-gent we provide a focused, broad range of services to a
+                world-class, international,
+                region-centric clientelle with our signature e-solutions.">
+  <meta property="og:image" content="./assets/side-image1.jpeg"
+    alt="A picture showing team members collaborating on technological solutions by E-telli-gent">
+
+  <!-- Twitter Meta Tags -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://e-telli-gent.com/">
+  <meta property="twitter:title" content="E-telli-gent - About Page">
+  <meta property="twitter:description" content="At E-telli-gent we provide a focused, broad range of services to a
+                world-class, international,
+                region-centric clientelle with our signature e-solutions.">
+  <meta property=" twitter:image" content="./assets/side-image1.jpeg"
+    alt="A picture showing team members collaborating on technological solutions">
 </head>
 
 <body>
@@ -91,6 +110,7 @@
       </div>
     </div>
   </section>
+
   <section class="mission-statement">
     <div class="wrapper">
       <div class="mission-statement-container">
@@ -123,6 +143,7 @@
       </div>
     </div>
   </section>
+
   <section class="slider">
     <div class="slide-container">
       <button class="slide-button left" id="slide-left"><i class="fas fa-chevron-left"></i></button>
@@ -146,6 +167,7 @@
       <button class="slide-button right" id="slide-right"><i class="fas fa-chevron-right"></i></button>
     </div>
   </section>
+
   <section class="quote small">
     <div class="title-container">
       <div class="text-label">Experiences Worth Talking About</div>
@@ -156,6 +178,7 @@
       <p class="center"><span class="name">Haris Shaikh</span> — Co-Founder of Aadam Ethnic</p>
     </div>
   </section>
+
   <section class="mission-statement">
     <div class="wrapper">
       <div class="mission-statement-container">
@@ -237,18 +260,18 @@
                 <img class="stars" src="./assets/star.svg" alt="Review Star">
               </div>
             </div>
-
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- SECTION SEVEN: FOOTER -->
   <footer>
     <div class="wrapper">
       <div class="footer-container">
 
-        <!--footer first content-->
+        <!--Column One-->
 
         <div class="textContainer">
           <a class="logo" href="index.html" title="Logo">
@@ -275,7 +298,7 @@
           </div>
         </div>
 
-        <!-- footer second content // Footer Navigation -->
+        <!--Column Two -->
 
         <ul class="textContainer">
           <h3>Navigation</h3>
@@ -285,6 +308,7 @@
           </li>
         </ul>
 
+        <!--Column Three-->
         <div class="textContainer">
           <h3>Subscribe To Our Newsletter</h3>
           <p>Get our monthly newsletter outlining our current projects and case studies.
@@ -295,23 +319,20 @@
             <button type="submit">Subscribe</button>
         </div>
 
+        <!--Column Four-->
         <ul class="textContainer">
           <h3>Get In Touch</h3>
           <li><a class="nav-link light" href="#" title="Click here to go to the homepage">2540 Kensington Road NW,
               Calgary, AB
               T2N 3S3</a></li>
-          <li><a class="nav-link light" href="#" title="Click here to go to the about page">info@etelligent.ca</a></li>
-          <li><a class="nav-link light" href="#" title="Click here to go to Travel's Twitter Page">+1 (403) 555-1234</a>
+          <li><a class="nav-link light" href="#" title="Click here to go to the about page">info@etelligent.ca</a>
+          </li>
+          <li><a class="nav-link light" href="#" title="Click here to go to Travel's Twitter Page">+1 (403)
+              555-1234</a>
           </li>
         </ul>
-
-        <!-- footer third content -->
-
-
-
       </div>
   </footer>
-
 
   <!-- copyright  -->
 
@@ -321,7 +342,7 @@
     </div>
   </div>
 
-
+  <!--JavaScript Tags-->
   <script src='scripts.js'></script>
 </body>
 
