all done ready to deploy

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
           <label for="toggle"><img class='menu' src='./assets/hamburger-light.svg' aria-hidden="true"><span
               class="sr-only">Menu</span></label>
           <input type="checkbox" id="toggle" name="toggle" />
-          <ul>
+          <ul class="dark">
             <li><a class="nav-link light" href="index.html" title="Click here to go to the homepage">Home</a></li>
             <li><a class="nav-link light" href="about.html" title="Click here to go to our about page">About</a></li>
             <li><a class="nav-link light" href="contact.html" title="Click here to go to our contact page">Contact
