final code ready to deploy

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
       </div>
     </nav>
   </header>
-  <div class="hero banner overlay">
+  <div class="hero banner-2 overlay">
     <div class="hero-container">
       <h1>Contact Us</h1>
       <div class="divider"></div>
