--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
             <div class="contact-flex">
               <div class="contact-text">
                 <h3>Lets Get in Touch</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, iure quibusdam doloremque odit eaque
-                  ipsa!</p>
+                <p>Have a question, comment, or inquiry? We would love to hear from you!</p>
               </div>
               <div class="contact-info">
                 <li><img src="./assets/marker.svg"> <a href="https://goo.gl/maps/cNBvfTur5hArw9Lg6"
