code all done, ready to deploy

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
           <p class="description">We believe in progress — merging business with technology and empower our clients to
             use multi-tiered, structually diverse tools with ease. Our core values set us apart by providing the right
             products to our world-class, international, region-centric clientelle</p>
-          <button>Learn More</button>
+          <a href="about.html" title="Click here to learn more and visit our about page"><button>Learn
+              More</button></a>
         </div>
         <div class="side-media">
           <div class="frame">
