proof read change

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="chevron">
           <img class="chevron-image" src="./assets/chevron-teal.svg" alt="Scroll Arrow Down">
         </div>
-        <button id="hero-button">See Features</button>
+        <button id="hero-button">See Products</button>
       </div>
       <div class="hero-image-split"></div>
     </div>
