proof read changes

--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
           <li><a class="nav-link light" href="#" title="Click here to go to the homepage">2540 Kensington Road NW,
               Calgary, AB
               T2N 3S3</a></li>
-          <li><a class="nav-link light" href="#" title="Click here to go to the about page">info@etelligent.ca</a>
+          <li><a class="nav-link light" href="#" title="Click here to go to the about page">info@etelligent.com</a>
           </li>
           <li><a class="nav-link light" href="#" title="Click here to go to Travel's Twitter Page">+1 (403)
               555-1234</a>
